# capstone-polymarket-arbitrage-agent

./: .env.example  .gitignore  .trigger-redeploy  CLAUDE.md  DEPLOY-RAILWAY.md  DEPLOY.md  Dockerfile  Makefile  RAILWAY_DEPLOYMENT.md  RAILWAY_TROUBLESHOOTING.md  README.md  SYSTEM_STATUS.md  alerts.json  deploy-railway.sh  docker-compose.yml  docker-entrypoint.sh  ideas.md  project_requirements.md  pyproject.toml  railway.json  railway.toml  requirements.txt  test_app.py
.github/workflows/: ci-cd.yml
docs/: KNOWN-ISSUES.md  railway-502-after-fix.md  railway-diagnostic.sh
docs/agents/: data-analyst.md  developer.md  devops-engineer.md  product-manager.md  qa-test-engineer.md  security-analyst.md  system-designer.md
docs/architecture/: mvp-api-integration.md  mvp-architecture.md  mvp-data-models.md
docs/deployment/: DEPLOYMENT-SUCCESS.md  deployment-verification-guide.md  environment-setup.md  railway-deployment.md  render-deployment.md  troubleshooting-railway-502.md
docs/monitoring/: metrics-guide.md
docs/notifications/: telegram-setup-guide.md
docs/prd/: mvp-prd.md
docs/reports/: mvp-security-report.md  mvp-test-report.md
docs/security/: security-report-mvp.md
docs/workflows/: agent-collaboration.md  development-workflow.md
scripts/: analyze-metrics.py  deploy.sh  get_chat_id.py  init_telegram_subscribers.py  simple_get_chat_id.py  test_telegram.py
src/: __init__.py
src/agents/: __init__.py  alert_generator.py  arbitrage_detector.py
src/api/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_polymarket_client.py
(+64 files in other folders)
